# Master-Control

./: README.md  a  a.pub  mastercontrol.py  pyproject.toml  requirements.txt
dashboard/: index.html
mcp/db/: db.py
mcp/devices/: serial_monitor.py
mcp/mq/: mq.py
mcp/plugins/: plugins.py
